--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="screenshots-carousel">
                 <div class="screenshot-slide">
                     <div class="screenshot-frame">
-                        <iframe src="apps/base/app/dashboard.html" title="Dashboard Preview"></iframe>
+                        <iframe src="/app/dashboard.html" title="Dashboard Preview"></iframe>
                     </div>
                     <div class="screenshot-caption">
                         <h3>Central Dashboard</h3>
@@ -276,7 +276,7 @@
                 </div>
                 <div class="screenshot-slide">
                     <div class="screenshot-frame">
-                        <iframe src="apps/base/app/editor.html" title="Editor Preview"></iframe>
+                        <iframe src="/app/editor.html" title="Editor Preview"></iframe>
                     </div>
                     <div class="screenshot-caption">
                         <h3>Intelligent Editor</h3>
@@ -285,7 +285,7 @@
                 </div>
                 <div class="screenshot-slide">
                     <div class="screenshot-frame">
-                        <iframe src="apps/base/app/interactive-prompt-tester.html" title="Interactive Prompt Tester Preview"></iframe>
+                        <iframe src="/app/interactive-prompt-tester.html" title="Interactive Prompt Tester Preview"></iframe>
                     </div>
                     <div class="screenshot-caption">
                         <h3>Interactive Prompt Tester</h3>
@@ -294,7 +294,7 @@
                 </div>
                 <div class="screenshot-slide">
                     <div class="screenshot-frame">
-                        <iframe src="apps/base/app/evaluation.html" title="Evaluation Preview"></iframe>
+                        <iframe src="/app/evaluation.html" title="Evaluation Preview"></iframe>
                     </div>
                     <div class="screenshot-caption">
                         <h3>Evaluation Center</h3>
@@ -303,7 +303,7 @@
                 </div>
                 <div class="screenshot-slide">
                     <div class="screenshot-frame">
-                        <iframe src="apps/base/app/community.html" title="Community Preview"></iframe>
+                        <iframe src="/app/community.html" title="Community Preview"></iframe>
                     </div>
                     <div class="screenshot-caption">
                         <h3>Community Hub</h3>
@@ -327,7 +327,7 @@
                 </button>
             </div>
             <div class="onboarding-preview">
-                <a href="apps/base/onboarding-preview/welcome.html" class="btn btn-secondary btn-lg" target="_blank">
+                <a href="/onboarding-preview/welcome.html" class="btn btn-secondary btn-lg" target="_blank">
                     <i class="fas fa-external-link-alt"></i>
                     Open Full App Demo
                 </a>
