--- a/app/editor.html
+++ b/app/editor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prompt Editor | MetaMind Hub</title>
-    <link rel="stylesheet" href="../css/app-styles.css">
+    <link rel="stylesheet" href="/app/app-styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css">
 </head>
 <body>
